--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,12 +1,26 @@
 ---
 version: '3'
 
+vars:
+  VER: '2.5'
+  
 tasks:
-  run:
-    desc: "Run the main application"
+  gpro:
+    desc: 'Run Gemini with the gemini-{{ .VER }}-pro model.'
     cmds:
-      - python3 fantasy_football_ai.py
-
+      - 'gemini -m gemini-{{ .VER }}-pro'
+  gflash:
+    desc: Run Gemini with the gemini-2.5-flash model.
+    cmds:
+      - 'gemini -m gemini-{{ .VER }}-flash'
+  glite:
+    desc: Run Gemini with the gemini-2.5-flash-lite model.
+    cmds:
+      - 'gemini -m gemini-{{ .VER }}-flash-lite'
+  bootstrap:
+    desc: Bootstarp
+    cmds:
+      - python3 -m venv venv
   lint:
     desc: "Lint the code with flake8"
     cmds:
