--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -12,9 +12,9 @@ tasks:
   init:
     desc: Initialize the project by creating environment file from templates.
     preconditions:
-      - test -f scripts/.env.tmpl
+      - test -f .env.tmpl
     cmds:
-      - cp scripts/.env.tmpl .env
+      - cp .env.tmpl .env
   serve:
     desc: Serve the documentation locally using Docker.
     cmds:
