--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,7 +6,7 @@ dotenv: [".env"]
 vars:
   VER: '2.5'
   # GEMINI_MODEL: 'gemini-1.5-flash-latest'
-  GEMINI_MODEL: 'gemini-2.5-flash'
+  GEMINI_MODEL: '{{.GEMINI_MODEL | default "gemini-2.5-flash"}}'
   IMAGE: nicholaswilde/mkdocs-material
   PORT: 8000
     
