--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -58,17 +58,17 @@ tasks:
   gpro:
     desc: 'Run Gemini with the gemini-{{ .VER }}-pro model.'
     cmds:
-        - |
+      - |
         source venv/bin/activate && gemini -m gemini-{{ .VER }}-pro
   gflash:
     desc: Run Gemini with the gemini-2.5-flash model.
     cmds:
-        - |
+      - |
         source venv/bin/activate && gemini -m gemini-{{ .VER }}-flash
   glite:
     desc: Run Gemini with the gemini-2.5-flash-lite model.
     cmds:
-        - |
+      - |
         source venv/bin/activate && gemini -m gemini-{{ .VER }}-flash-lite
   bootstrap:
     desc: Bootstarp
@@ -89,25 +89,21 @@ tasks:
   download:
     desc: "Download NFL player stats. Usage: task download -- --years 2022 2023"
     cmds:
-      - python3 scripts/download_stats.py {{.CLI_ARGS}}
-
-  # A task to have Gemini analyze your team.
-  analyze:
-    desc: Have Gemini analyze your team
-    cmds:
-      - python3 scripts/analysis.py --model models/{{.GEMINI_MODEL}}
+      - python3 scripts/download_stats.py {{ .CLI_ARGS }}
 
   # A task to get pickup recommendations.
   pickup:
     desc: Get pickup recommendations based on available players and team needs
     cmds:
-      - python3 scripts/pickup_suggester.py
+      - |
+        source venv/bin/activate && ./scripts/pickup_suggester.py
 
   # A task to get trade suggestions.
   trade:
     desc: Get trade suggestions based on player stats
     cmds:
-      - python3 scripts/trade_suggester.py
+      - |
+        source venv/bin/activate && ./scripts/trade_suggester.py
 
   # A task to run the draft strategizer.
   draft_strategy:
@@ -122,7 +118,6 @@ tasks:
       - task: download
       - task: my_team
       - task: available_players
-      - task: analyze
       - task: pickup
       - task: trade
       - task: report
@@ -130,17 +125,20 @@ tasks:
   my_team:
     desc: Get your fantasy football team and create my_team.md
     cmds:
-      - python3 scripts/get_my_team.py
+      - |
+        source venv/bin/activate && ./scripts/get_my_team.py
 
   available_players:
     desc: Get available players from your league and create available_players.csv
     cmds:
-      - python3 scripts/get_available_players.py
+      - |
+        source venv/bin/activate && ./scripts/get_available_players.py
       
   settings:
     desc: Get your league settings
     cmds:
-      - python3 scripts/get_league_settings.py
+      - |
+        source venv/bin/activate && scripts/get_league_settings.py
 
   download_data:
     desc: Download player data from Sleeper API
