--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,19 +9,20 @@ vars:
   GEMINI_MODEL: '{{.GEMINI_MODEL | default "gemini-2.5-flash"}}'
   IMAGE: nicholaswilde/mkdocs-material
   PORT: 8000
+  SOURCE: 'source venv/bin/activate'
     
 tasks:
   report:
     desc: Generate a Markdown report from the analysis
     cmds:
       - |
-        source venv/bin/activate && ./scripts/generate_report.py
+        {{ .SOURCE }} && ./scripts/generate_report.py
 
   render_report:
     desc: Render the generated Markdown report to HTML and open in browser
     cmds:
       - |
-        source venv/bin/activate && ./scripts/render_report.py
+        {{ .SOURCE }} && ./scripts/render_report.py
 
   update:
     desc: Update Docker container
@@ -67,19 +68,19 @@ tasks:
     desc: 'Run Gemini with the gemini-{{ .VER }}-pro model.'
     cmds:
       - |
-        source venv/bin/activate && gemini -m gemini-{{ .VER }}-pro
+        {{ .SOURCE }} && gemini -m gemini-{{ .VER }}-pro
 
   gflash:
     desc: Run Gemini with the gemini-2.5-flash model.
     cmds:
       - |
-        source venv/bin/activate && gemini -m gemini-{{ .VER }}-flash
+        {{ .SOURCE }} && gemini -m gemini-{{ .VER }}-flash
 
   glite:
     desc: Run Gemini with the gemini-2.5-flash-lite model.
     cmds:
       - |
-        source venv/bin/activate && gemini -m gemini-{{ .VER }}-flash-lite
+        {{ .SOURCE }} && gemini -m gemini-{{ .VER }}-flash-lite
 
   bootstrap:
     desc: Bootstrap the project
@@ -103,35 +104,35 @@ tasks:
     desc: Install Python dependencies
     cmds:
       - |
-        source venv/bin/activate && pip install -r requirements.txt
+        {{ .SOURCE }} && pip install -r requirements.txt
 
   # A task to download the latest player stats.
   download:
     desc: "Download NFL player stats. Usage: task download -- --years 2022 2023"
     cmds:
       - |
-        source venv/bin/activate && ./scripts/download_stats.py {{ .CLI_ARGS }}
+        {{ .SOURCE }} && ./scripts/download_stats.py {{ .CLI_ARGS }}
 
   # A task to get pickup recommendations.
   pickup:
     desc: Get pickup recommendations based on available players and team needs
     cmds:
       - |
-        source venv/bin/activate && ./scripts/pickup_suggester.py
+        {{ .SOURCE }} && ./scripts/pickup_suggester.py
 
   # A task to get trade suggestions.
   trade:
     desc: Get trade suggestions based on player stats
     cmds:
       - |
-        source venv/bin/activate && ./scripts/trade_suggester.py
+        {{ .SOURCE }} && ./scripts/trade_suggester.py
 
   # A task to run the draft strategizer.
   draft_strategy:
     desc: Run the draft strategizer to get draft recommendations
     cmds:
       - | 
-        source venv/bin/activate && python3 scripts/draft_strategizer.py
+        {{ .SOURCE }} && python3 scripts/draft_strategizer.py
 
   weekly_update:
     desc: "Run the full weekly update: download stats, update team, get available players, analyze, get suggestions, and generate report."
@@ -147,7 +148,7 @@ tasks:
     desc: Get your fantasy football team and create my_team.md
     cmds:
       - |
-        source venv/bin/activate && ./scripts/get_my_team.py
+        {{ .SOURCE }} && ./scripts/get_my_team.py
 
   available_players:
     desc: Get available players from your league and create available_players.csv
@@ -159,7 +160,7 @@ tasks:
     desc: Get your league settings
     cmds:
       - |
-        source venv/bin/activate && scripts/get_league_settings.py
+        {{ .SOURCE }} && scripts/get_league_settings.py
 
   download_data:
     desc: Download player data from Sleeper API
