--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ edit_uri: "edit/main/docs/"
 # Page tree
 nav:
   - Home: index.md
+  - Getting Started: getting-started.md
+  - Usage: usage.md
   - Reports:
     - reports/index.md
 
