--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -117,6 +117,7 @@ tasks:
     cmds:
       - python3 -m venv venv
       - task: deps
+      - task: my_team
       - task: settings
       - task: download
       - task: download_data
