--- a/config.yaml
+++ b/config.yaml
@@ -1,81 +1,85 @@
+---
 league_settings:
+  league_name: San Cola Cup Covid Years
   number_of_teams: 12
   playoff_teams: 8
 roster_settings:
+  BE: 7
+  D_ST: 1
+  DP: 2
+  IR: 1
+  K: 1
   QB: 1
   RB: 2
-  WR: 2
-  TE: 1
   RB_WR: 1
+  TE: 1
+  WR: 2
   WR_TE: 1
-  K: 1
-  DST: 1
-  DP: 2
-  BE: 7
-  IR: 1
-analysis_settings:
-  bye_week_conflict_threshold: 3
-  num_trade_targets: 10
 scoring_rules:
-    passing_yards: 0.04
-    passing_touchdowns: 6
-    interceptions_thrown: -3
-    rushing_yards: 0.1
-    rushing_touchdowns: 6
-    receiving_yards: 0.1
-    receiving_touchdowns: 6
-    receptions: 0.5
-    2pt_conversion_pass: 2
-    2pt_conversion_rush: 2
-    2pt_conversion_rec: 2
-    fumbles_lost: -2
-    field_goals_made_0_39: 3
-    field_goals_made_40_49: 4
-    field_goals_made_50_59: 5
-    field_goals_made_60_plus: 5
-    field_goals_missed_0_39: -1
-    extra_points_made: 1
-    extra_points_missed: -1
-    sacks: 1
-    interceptions: 3
-    fumbles_recovered: 3
-    fumbles_forced: 1
-    safeties: 3
-    blocked_kicks: 2
-    defensive_touchdowns: 6
-    points_allowed_0: 10
-    points_allowed_1_6: 7.5
-    points_allowed_7_13: 5
-    points_allowed_14_17: 2.5
-    points_allowed_22_27: -2.5
-    points_allowed_28_34: -5
-    points_allowed_35_45: -7.5
-    points_allowed_46_plus: -10
-    total_yards_allowed_less_100: 10
-    total_yards_allowed_100_199: 7.5
-    total_yards_allowed_200_299: 5
-    total_yards_allowed_300_349: 2.5
-    total_yards_allowed_400_449: -2.5
-    total_yards_allowed_450_499: -7.5
-    total_yards_allowed_500_549: -15
-    total_yards_allowed_550_plus: -25
-    solo_tackles: 0.75
-    assisted_tackles: 0.5
-    passes_defensed: 1
-    stuffs: 1
-    kickoff_return_touchdowns: 6
-    punt_return_touchdowns: 6
-    40_plus_yard_td_pass_bonus: 1
-    50_plus_yard_td_pass_bonus: 2
-    40_plus_yard_td_rec_bonus: 1
-    50_plus_yard_td_rec_bonus: 2
-    40_plus_yard_td_rush_bonus: 1
-    50_plus_yard_td_rush_bonus: 2
-    100_199_yard_receiving_game: 3
-    200_plus_yard_receiving_game: 4
-    100_199_yard_rushing_game: 3
-    200_plus_yard_rushing_game: 4
-    300_399_yard_passing_game: 3
-    400_plus_yard_passing_game: 4
-    every_25_kickoff_return_yards: 0.04
-    every_25_punt_return_yards: 0.04
+  0_points_allowed: 10.0
+  1_6_points_allowed: 7.5
+  1_2_sack: 0.5
+  100_199_total_yards_allowed: 7.5
+  100_199_yard_receiving_game: 3.0
+  100_199_yard_rushing_game: 3.0
+  14_17_points_allowed: 2.5
+  200+_yard_receiving_game: 4.0
+  200+_yard_rushing_game: 4.0
+  200_299_total_yards_allowed: 5.0
+  22_27_points_allowed: -2.5
+  28_34_points_allowed: -5.0
+  2pt_passing_conversion: 2.0
+  2pt_receiving_conversion: 2.0
+  2pt_return: 3.0
+  2pt_rushing_conversion: 2.0
+  300_349_total_yards_allowed: 2.5
+  300_399_yard_passing_game: 3.0
+  35_45_points_allowed: -7.5
+  40+_yard_td_pass_bonus: 1.0
+  40+_yard_td_rec_bonus: 1.0
+  40+_yard_td_rush_bonus: 1.0
+  400+_yard_passing_game: 4.0
+  400_449_total_yards_allowed: -2.5
+  450_499_total_yards_allowed: -7.5
+  46+_points_allowed: -10.0
+  50+_yard_td_pass_bonus: 2.0
+  50+_yard_td_rec_bonus: 2.0
+  50+_yard_td_rush_bonus: 2.0
+  500_549_total_yards_allowed: -15.0
+  550+_total_yards_allowed: -25.0
+  7_13_points_allowed: 5.0
+  assisted_tackles: 0.5
+  blocked_punt_or_fg_return_for_td: 6.0
+  blocked_punt,_pat_or_fg: 2.0
+  each_fumble_forced: 1.0
+  each_fumble_recovered: 3.0
+  each_interception: 3.0
+  each_pat_made: 1.0
+  each_pat_missed: -1.0
+  each_safety: 3.0
+  every_10_receiving_yards: 1.0
+  every_10_rushing_yards: 1.0
+  every_25_kickoff_return_yards: 1.0
+  every_25_passing_yards: 1.0
+  every_25_punt_return_yards: 1.0
+  every_5_receptions: 2.5
+  fg_made_(0_39_yards): 3.0
+  fg_made_(40_49_yards): 4.0
+  fg_made_(50_59_yards): 5.0
+  fg_made_(60+_yards): 5.0
+  fg_missed_(0_39_yards): -1.0
+  fumble_recovered_for_td: 6.0
+  fumble_return_td: 6.0
+  interception_return_td: 6.0
+  interceptions_thrown: -3.0
+  kickoff_return_td: 6.0
+  less_than_100_total_yards_allowed: 10.0
+  passes_defensed: 1.0
+  punt_return_td: 6.0
+  solo_tackles: 0.75
+  stuffs: 1.0
+  td_pass: 6.0
+  td_reception: 6.0
+  td_rush: 6.0
+  total_fumbles_lost: -2.0
+  total_tackles: 0.1
