feat(ai-chat): Implement interactive AI chat and fix quit functionality
This commit introduces an interactive chat interface for the Fantasy Football AI assistant.
Key changes include:
- Refactored `scripts/fantasy_football_ai.py` to allow continuous user input.
- Implemented robust handling for the 'quit' command to ensure clean exit.
- Added a new `ai_chat` task to `Taskfile.yml` for easy execution of the chat interface.
- Updated Dockerfile for improved build process.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,7 +26,7 @@ tasks:
   build:
     desc: Build the Dockerfile
     cmds:
-      - docker build -t fantasy-football-ai ./docker/
+      - docker build -f docker/Dockerfile -t fantasy-football-ai .
   run:
     desc: Run the Dockerfile
     cmds:
@@ -108,6 +108,12 @@ tasks:
     cmds:
       - |
         {{ .SOURCE }} && gemini -m gemini-{{ .VER }}-flash-lite
+
+  ai_chat:
+    desc: Interact with the Fantasy Football AI assistant.
+    cmds:
+      - |
+        {{ .SOURCE }} && python3 scripts/fantasy_football_ai.py
 
   bootstrap:
     desc: Bootstrap the project
