feat(taskfile): Add compare_players task
This commit adds a new task `compare_players` to `Taskfile.yml`. This task runs the `scripts/player_comparer.py` script, allowing users to easily compare fantasy football players side-by-side from the command line.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -206,6 +206,12 @@ tasks:
       - |
         {{ .SOURCE }} && python3 scripts/compare_roster_positions.py
 
+  compare_players:
+    desc: Compare fantasy football players side-by-side
+    cmds:
+      - |
+        {{ .SOURCE }} && python3 scripts/player_comparer.py
+
   analyze_game:
     desc: Analyze your last fantasy football game and get improvement suggestions
     cmds:
